feat: Add pytest autograders for Modules 01-03
- Create pytest configuration (pytest.ini) with markers and options
- Add conftest.py with shared fixtures and test utilities
- Implement comprehensive autograders for Module 01 (fundamentals)
- Implement comprehensive autograders for Module 02 (zero-shot)
- Implement comprehensive autograders for Module 03 (few-shot)
- Add unit tests, integration tests, and concept validation
- Add pytest and pytest-cov to requirements.txt
- Tests validate student solutions automatically
- Include both API-independent and API-requiring tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,10 @@ ipykernel>=6.27.0
 matplotlib>=3.7.0
 rich>=13.7.0
 
+# For testing and autograding
+pytest>=7.4.0
+pytest-cov>=4.1.0
+
 # Optional: For production patterns
 fastapi>=0.109.0
 uvicorn>=0.27.0
