--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ jsonschema>=4.20.0
 # For text processing and ML utilities
 scikit-learn>=1.3.0
 sentence-transformers>=2.2.0
+rank-bm25>=0.2.2
 
 # For database management
 sqlalchemy>=2.0.0
